--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Leandro Rodríguez" />
+<meta name="author" content="Leandro Rodríguez Bolaños" />
 
 <meta name="date" content="2020-04-20" />
 
@@ -1529,7 +1529,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">GF-0604 Procesamiento de datos geográficos<br>Laboratorio 02: R - Graficación básica</h1>
-<h4 class="author">Leandro Rodríguez</h4>
+<h4 class="author">Leandro Rodríguez Bolaños</h4>
 <h4 class="date">2020-04-20</h4>
 
 </div>
